--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,18 +72,24 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
+     def koin_version ="3.1.2"
 //    Koin DI
-    implementation 'org.koin:koin-android:2.0.1'
-    implementation 'org.koin:koin-androidx-scope:2.0.1'
-    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
+    implementation "io.insert-koin:koin-android:$koin_version"
+    testImplementation "io.insert-koin:koin-test:$koin_version"
+    implementation "io.insert-koin:koin-android-viewmodel:$koin_version"
+    // Koin for Kotlin apps
+//    implementation "io.insert-koin:koin-ktor:$koin_version"
+
+//    implementation 'org.koin:koin-android:2.0.1'
+//    implementation 'org.koin:koin-androidx-scope:2.0.1'
+//    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
 
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.work:work-runtime:2.5.0'
-    testImplementation 'junit:junit:4.+'
+    implementation 'androidx.work:work-runtime:2.6.0-beta02'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
